# TUSUR-Network-Programming

./: .gitignore  CMakeLists.txt  README.md
Klimov/: CMakeLists.txt  Klimov.cpp  Klimov.h  KlimovTest.cpp
Socket/: CMakeLists.txt  Client.cpp  Client.h  Server.cpp  Server.h  Socket.cpp  Socket.h  Socket_client.cpp  Socket_client.h  Socket_server.cpp  Socket_server.h
res/: client.rc
